--- a/.github/workflows/gh-actions.yaml
+++ b/.github/workflows/gh-actions.yaml
@@ -28,7 +28,7 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./
-        remote-dir: ${{ secrets.FTP_REMOTE_DIR }}
+        # remote-dir: ${{ secrets.FTP_REMOTE_DIR }}
         exclude: |
           **/.github/**
           **/.git/**
